# SS17

CV/Exercise1_code/: CMakeLists.txt  Makefile  cornerdetector.cpp  cornerdetector.h  main  main.cpp
CV/Exercise2_code/: .imagejoiner.cpp.swp  .imagejoiner.h.swp  .main.cpp.swp  .multimatcher.cpp.swp  .multimatcher.h.swp  CMakeLists.txt  imagejoiner.cpp  imagejoiner.h  main  main.cpp  multimatcher.cpp  multimatcher.h
CV/Exercise3_code/: CMakeLists.txt  cameras.off  main  main.cpp  tranX_rotY.off  tranX_rotY_new.off  writeoff.cpp  writeoff.h
CV/Exercise4_code/: CMakeLists.txt  cameracalibration.cpp  cameracalibration.h  main.cpp
CV/Exercise5_code/: CMakeLists.txt  cameracalibration.cpp  cameracalibration.h  main.cpp
CV/Summary/: summary.tex
FoundCrypt/: ueb1.tex  ueb2.tex
FoundCrypt/Summary/: lecture.tex  lecture2.tex
KI2/: orga  ueb1.tex
KI2/Summary/: lecture2.tex  summary.tex
KI2/ueb2/: ueb2.tex
KI2/ueb3/: networks.xml  ueb3.tex
KI2/ueb5/: ueb5.tex
KI2/ueb6/: prob61.py  ueb6.tex
KI2/ueb7/: ueb7.tex
KI2/ueb9/NN_src/: ConstantBias.java  ConstantLearningRate.java  EuclideanLoss.java  FullyConnected.java  LinearActivation.java  Main.java  OutputLayer.java  RandomWeight.java  TanhActivation.java  Testcases.java
PA/: lecture.tex  lecture2.tex  protokol.tex
Phil/Essay/: essay.tex
Phil/Leitfragen/: leitfragen.tex  lit.bib
Phil/Referat/: referat.tex
